# uv

./: Cargo.toml
crates/distribution-types/: Cargo.toml
crates/distribution-types/src/: lib.rs
crates/pep508-rs/src/marker/: algebra.rs  simplify.rs  tree.rs
crates/uv/: Cargo.toml
crates/uv-cli/: Cargo.toml
crates/uv-cli/src/: lib.rs
crates/uv-client/src/: registry_client.rs
crates/uv-distribution/: Cargo.toml
crates/uv-distribution/src/: download.rs  error.rs
crates/uv-distribution/src/source/: mod.rs
crates/uv-extract/: Cargo.toml
crates/uv-metadata/src/: lib.rs
crates/uv-publish/: Cargo.toml
crates/uv-publish/src/: lib.rs
crates/uv-resolver/src/resolver/: provider.rs
crates/uv/src/: lib.rs
crates/uv/src/commands/: mod.rs  publish.rs
docs/getting-started/: installation.md
